[package]
name = "mouse-trail-enforcement"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
windows = { version = "0.53.0", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Console",
] }

[profile.release]
opt-level = 3
